Work on front-end

--- a/website/index.html
+++ b/website/index.html
@@ -7,10 +7,14 @@
     <title>Title</title>
 
 
-
 </head>
 
 <body>
+
+
+<div>Hello {{=it.test}}!</div>
+<div>The unix time at page generation is {{=it.time}}</div>
+<div>Need to build a pretty page here...</div>
 
 </body>
 </html>
