Lots of work on front-end

--- a/website/home.html
+++ b/website/home.html
@@ -1,1 +1,1 @@
-<div>Welcome to Cryppit - The first multi-pool running on NOMP!</div>
+<div>Welcome to {{=it.portalConfig.website.siteTitle}}! - The first multi-pool running on NOMP!</div>
