--- a/website/index.html
+++ b/website/index.html
@@ -23,11 +23,36 @@
 <header class="header">
     <div class="pure-menu pure-menu-open pure-menu-horizontal">
         <ul>
-            <li id="home" class="{{? it.selected === '' }}selected{{?}}"><a class="hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp; Home</a></li>
-            <li class="{{? it.selected === 'getting_started' }}selected{{?}}"><a class="hot-swapper" href="/getting_started"><i class="fa fa-arrow-right"></i>&nbsp; Getting Started</a></li>
-            <li class="{{? it.selected === 'stats' }}selected{{?}}"><a class="hot-swapper" href="/stats"><i class="fa fa-bar-chart-o"></i>&nbsp; Stats</a></li>
-            <li class="{{? it.selected === 'api' }}selected{{?}}"><a class="hot-swapper" href="/api"><i class="fa fa-code"></i>&nbsp; API</a></li>
+            <li id="home" class="{{? it.selected === '' }}selected{{?}}">
+                <a class="hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;
+                    Home
+                </a>
+            </li>
+            <li class="{{? it.selected === 'getting_started' }}selected{{?}}">
+                <a class="hot-swapper" href="/getting_started">
+                    <i class="fa fa-rocket"></i>&nbsp;
+                    Getting Started
+                </a>
+            </li>
+            <li class="{{? it.selected === 'stats' }}selected{{?}}">
+                <a class="hot-swapper" href="/stats">
+                    <i class="fa fa-bar-chart-o"></i>&nbsp;
+                    Stats
+                </a>
+            </li>
+            <li class="{{? it.selected === 'api' }}selected{{?}}">
+                <a class="hot-swapper" href="/api">
+                    <i class="fa fa-code"></i>&nbsp;
+                    API
+                </a>
+            </li>
         </ul>
+
+        <div class="stats">
+            <div><i class="fa fa-users"></i>&nbsp;<span id="statsMiners">{{=it.stats.global.workers}}</span> Miners</div>
+            <div><i class="fa fa-tachometer"></i>&nbsp;<span id="statsHashrate">{{=it.stats.global.hashrate}}</span> KH/s</div>
+        </div>
+
     </div>
 </header>
 
@@ -40,10 +65,13 @@
 
 <footer>
 
-
-
-    <div>This site is powered by the open source&nbsp;<a href="https://github.com/zone117x/node-open-mining-portal/">NOMP</a>&nbsp;project created by Matthew Little and licensed under the&nbsp;<a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a></div>
-    <div><i class="fa fa-heart"></i>&nbsp; Support this project by donating&nbsp;<i class="fa fa-btc"></i>&nbsp;BTC: 1KRotMnQpxu3sePQnsVLRy3EraRFYfJQFR</div>
+    <div>
+        This site is powered by the open source&nbsp;<a target="_blank" href="https://github.com/zone117x/node-open-mining-portal/">NOMP</a>&nbsp;
+        project created by Matthew Little and licensed under the&nbsp;<a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a>
+    </div>
+    <div>
+        <i class="fa fa-heart"></i>&nbsp; Support this project by donating&nbsp;<i class="fa fa-btc"></i>&nbsp;BTC: 1KRotMnQpxu3sePQnsVLRy3EraRFYfJQFR
+    </div>
     <div id="communityFooter">
         Community&nbsp;<i class="fa fa-comment"></i>&nbsp;: &nbsp;<a target="_blank" href="https://kiwiirc.com/client/irc.freenode.net/nomp">#nomp IRC</a>
         &nbsp;&nbsp;|&nbsp;&nbsp;
