Payment processing seems to be working well

--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
 
+    <link rel="icon" type="image/png" href="/static/favicon.png"/>
+
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.4.2/pure-min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
