--- a/website/pages/stats.html
+++ b/website/pages/stats.html
@@ -1,5 +1,27 @@
 <div>
-    fancy graphs here
-    <br>
-    {{=JSON.stringify(it.stats)}}
+<table class="pure-table">
+    <thead>
+    <tr>
+        <th>Pool</th>
+        <th>Algo</th>
+        <th>Workers</th>
+        <th>Valid Shares</th>
+        <th>Invalid Shares</th>
+        <th>Blocks</th>
+        <th>Hashrate</th>
+    </tr>
+    </tr>
+    </thead>
+        {{ for(var pool in it.stats.pools) { }}
+            <tr class="pure-table-odd">
+                <td>{{=it.stats.pools[pool].name}}</td>
+                <td>{{=it.stats.pools[pool].algorithm}}</td>
+                <td>{{=Object.keys(it.stats.pools[pool].workers).length}}</td>
+                <td>{{=it.stats.pools[pool].poolStats.validShares}}</td>
+                <td>{{=it.stats.pools[pool].poolStats.invalidShares}}</td>
+                <td>{{=it.stats.pools[pool].poolStats.validBlocks}}</td>
+                <td>{{=it.stats.pools[pool].hashrateString}}</div>
+            </tr>
+        {{ } }}
+</table>
 </div>
