Refactored website. Added historical stats.

--- a/website/pages/stats.html
+++ b/website/pages/stats.html
@@ -1,27 +1,44 @@
-<div>
-<table class="pure-table">
-    <thead>
-    <tr>
-        <th>Pool</th>
-        <th>Algo</th>
-        <th>Workers</th>
-        <th>Valid Shares</th>
-        <th>Invalid Shares</th>
-        <th>Blocks</th>
-        <th>Hashrate</th>
-    </tr>
-    </tr>
-    </thead>
-        {{ for(var pool in it.stats.pools) { }}
-            <tr class="pure-table-odd">
-                <td>{{=it.stats.pools[pool].name}}</td>
-                <td>{{=it.stats.pools[pool].algorithm}}</td>
-                <td>{{=Object.keys(it.stats.pools[pool].workers).length}}</td>
-                <td>{{=it.stats.pools[pool].poolStats.validShares}}</td>
-                <td>{{=it.stats.pools[pool].poolStats.invalidShares}}</td>
-                <td>{{=it.stats.pools[pool].poolStats.validBlocks}}</td>
-                <td>{{=it.stats.pools[pool].hashrateString}}</div>
-            </tr>
-        {{ } }}
-</table>
+<style>
+
+    #topCharts{
+        padding: 18px;
+    }
+
+    #topCharts > div > svg{
+        display: block;
+        height: 280px;
+    }
+
+    .chartLabel{
+        font-size: 1.2em;
+        text-align: center;
+        padding: 4px;
+    }
+
+    .chartHolder{
+        border: solid 1px #c7c7c7;
+        border-radius: 5px;
+        padding: 5px;
+        margin-bottom: 18px;
+    }
+
+</style>
+
+<div id="topCharts">
+
+    <div class="chartLabel">Workers Per Pool</div>
+    <div class="chartHolder"><svg id="poolWorkers"/></div>
+
+    <div class="chartLabel">Hashrate Per Pool</div>
+    <div class="chartHolder"><svg id="poolHashrate"/></div>
+
+    <div class="chartLabel">Blocks Pending Per Pool</div>
+    <div class="chartHolder"><svg id="poolBlocks"/></div>
+
 </div>
+
+
+
+<script>
+    document.querySelector('main').appendChild(document.createElement('script')).src = '/static/stats.js';
+</script>
