Fix panel alignment in firefox

--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -70,6 +70,12 @@
         padding: 3px;
     }
 
+    #boxesLower > div:nth-child(1) {
+        float: left;
+    }
+    #boxesLower > div:nth-child(2) {
+        float: right;
+    }
 
 </style>
 
