Added new tab, Table statistics per coin/algo

--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,13 @@
             <li class="{{? it.selected === 'stats' }}pure-menu-selected{{?}}">
                 <a class="hot-swapper" href="/stats">
                     <i class="fa fa-bar-chart-o"></i>&nbsp;
-                    Stats
+                    Graph Stats
+                </a>
+            </li>
+            <li class="{{? it.selected === 'tbs' }}pure-menu-selected{{?}}">
+                <a class="hot-swapper" href="/tbs">
+                    <i class="fa fa-table"></i>&nbsp;
+                    Tab Stats
                 </a>
             </li>
             <li class="{{? it.selected === 'api' }}pure-menu-selected{{?}}">
