--- a/website/pages/api.html
+++ b/website/pages/api.html
@@ -3,7 +3,7 @@
 
 <ul>
 <li>/stats - raw json statistic</li>
-<li>/pool_stats - historical time per pool json <li>
+<li>/pool_stats - historical time per pool json </li>
 <li>/live_stats - live stats </li>
 
 </ul>
