--- a/website/pages/tbs.html
+++ b/website/pages/tbs.html
@@ -40,7 +40,10 @@
         <th>Workers</th>
         <th>Valid Shares</th>
         <th>Invalid Shares</th>
-        <th>Blocks</th>
+        <th>Total Blocks</th>
+        <th>Pending</th>
+        <th>Confirmed</th>
+        <th>Orphaned</th>
         <th>Hashrate</th>
     </tr>
     </tr>
@@ -53,6 +56,9 @@
         <td>{{=it.stats.pools[pool].poolStats.validShares}}</td>
         <td>{{=it.stats.pools[pool].poolStats.invalidShares}}</td>
         <td>{{=it.stats.pools[pool].poolStats.validBlocks}}</td>
+        <td>{{=it.stats.pools[pool].blocks.pending}}</td>
+        <td>{{=it.stats.pools[pool].blocks.confirmed}}</td>
+        <td>{{=it.stats.pools[pool].blocks.orphaned}}</td>
         <td>{{=it.stats.pools[pool].hashrateString}}</td>
     </tr>
     {{ } }}
