--- a/website/pages/stats.html
+++ b/website/pages/stats.html
@@ -162,7 +162,7 @@
     </script>
 </div>
 
-<!-- <div class="pure-g-r" id="bottomTableStats">
+<div class="pure-g-r" id="bottomTableStats">
     <div class="pure-u-1-1">
         <table class="pure-table" id="statTable">
             <thead>
@@ -196,4 +196,4 @@
             {{ } }}
         </table>
     </div>
-</div> -->
+</div>
