Add workers tab

--- a/website/index.html
+++ b/website/index.html
@@ -51,6 +51,12 @@
                     Tab Stats
                 </a>
             </li>
+            <li class="{{? it.selected === 'wks' }}pure-menu-selected{{?}}">
+                <a class="hot-swapper" href="/wks">
+                    <i class="fa fa-cogs"></i>&nbsp;
+                    Workers Stats
+                </a>
+            </li>
             <li class="{{? it.selected === 'api' }}pure-menu-selected{{?}}">
                 <a class="hot-swapper" href="/api">
                     <i class="fa fa-code"></i>&nbsp;
