--- a/website/index.html
+++ b/website/index.html
@@ -51,8 +51,8 @@
                     Tab Stats
                 </a>
             </li>
-            <li class="{{? it.selected === 'wks' }}pure-menu-selected{{?}}">
-                <a class="hot-swapper" href="/wks">
+            <li class="{{? it.selected === 'workers' }}pure-menu-selected{{?}}">
+                <a class="hot-swapper" href="/workers">
                     <i class="fa fa-cogs"></i>&nbsp;
                     Workers Stats
                 </a>
