Graph colors stay persistent and fixed capitalization issues.

--- a/website/pages/stats.html
+++ b/website/pages/stats.html
@@ -47,6 +47,7 @@
     }
     .boxStatsList > div > div{
         padding: 3px;
+        text-transform: capitalize;
     }
 
     #timeSelector {
@@ -74,6 +75,7 @@
     #statTable {
         margin: 0 auto;
         text-align: center;
+        text-transform: capitalize;
     }
 </style>
 
