Website color changes and other updates

--- a/website/pages/api.html
+++ b/website/pages/api.html
@@ -1,10 +1,10 @@
-<div>
+<div style="padding:20px;">
     API Docs here
 
 <ul>
-<li>/stats - raw json statistic</li>
-<li>/pool_stats - historical time per pool json </li>
-<li>/live_stats - live stats </li>
+<li><a href="/api/stats">/api/stats</a> - raw json statistic</li>
+<li><a href="/api/pool_stats">/api/pool_stats</a> - historical time per pool json </li>
+<li><a href="/api/live_stats">/api/live_stats</a> - live stats </li>
 
 </ul>
 </div>
