--- a/website/index.html
+++ b/website/index.html
@@ -19,18 +19,29 @@
     <link rel="stylesheet" href="/static/nvd3.css">
 
     <script src="/static/main.js"></script>
+    
+    <script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-45384130-2', 'xram.co');
+	ga('send', 'pageview');
+
+	</script>
     <link rel="stylesheet" href="/static/style.css">
 
-    <title>NOMP</title>
+    <title>XRamPool</title>
 
 </head>
 
 <body>
 
 <header>
-    <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal">
+    <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal" style="background-color:#4b4b4b;">
 
-        <a class="pure-menu-heading hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;NOMP</a>
+        <a class="pure-menu-heading hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;XRamPool</a>
 
         <ul>
             <li class="{{? it.selected === 'getting_started' }}pure-menu-selected{{?}}">
@@ -48,7 +59,7 @@
             <li class="{{? it.selected === 'tbs' }}pure-menu-selected{{?}}">
                 <a class="hot-swapper" href="/tbs">
                     <i class="fa fa-table"></i>&nbsp;
-                    Tab Stats
+                    Tbl Stats
                 </a>
             </li>
             <li class="{{? it.selected === 'workers' }}pure-menu-selected{{?}}">
