--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -76,15 +76,17 @@
 
 <div class="pure-g-r" id="boxWelcome">
     <div class="pure-u-1-3">
-        <img id="logoImg" src="/static/logo.svg">
+        <img id="logoImg" src="/static/logo.jpg">
     </div>
     <div class="pure-u-2-3">
         <div id="welcomeText">Welcome to the future of mining</div>
         <ul id="welcomeItems">
-            <li>Low fees</li>
-            <li>High performance Node.js backend</li>
-            <li>User friendly mining client</li>
-            <li>Multi-coin / multi-pool</li>
+            <li>!!! Only for optimized kernel binaries in grs-sgminer !!!</li>
+            <li>See <a href="https://bitcointalk.org/index.php?topic=652849">this BTC talk thread</a> for details</li>
+            <li>No extra pool fees (what you see in grs-sgminer is what you are paid for)</li>
+            <li>No transaction fees</li>
+            <li>Payouts every hour (from 1 GRS, 1 ATH, 1 DOKDO and 0.01 DMD</li>
+            <li>Support: <a href="https://bitcointalk.org/index.php?action=profile;u=289385">BTC talk PM</a></li>
         </ul>
     </div>
 </div>
