added DO referral

--- a/website/index.html
+++ b/website/index.html
@@ -75,7 +75,7 @@
 <footer>
 
     <div>
-        This site is powered by the open source&nbsp;<a target="_blank" href="https://github.com/zone117x/node-open-mining-portal/">NOMP</a>&nbsp;
+        This site is powered by <a href="https://www.digitalocean.com/?refcode=85ebc180b760" target="_blank">Digital Ocean</a> and the open source&nbsp;<a target="_blank" href="https://github.com/zone117x/node-open-mining-portal/">NOMP</a>&nbsp;
         project created by Matthew Little and licensed under the&nbsp;<a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a>
     </div>
     <div>
