--- a/website/index.html
+++ b/website/index.html
@@ -77,6 +77,7 @@
     <div id="communityFooter">
         Community&nbsp;<i class="fa fa-comment"></i>&nbsp;: &nbsp;<a target="_blank" href="https://kiwiirc.com/client/irc.freenode.net/bemining">#bemining IRC</a>
         &nbsp;&nbsp;|&nbsp;&nbsp;
+        Twitter&nbsp;<i class="fa fa-twitter"></i>&nbsp;: &nbsp;<a target="_blank" href="https://twitter.com/bemining">@bemining</a>
     </div>
 
 </footer>
