--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
     <script src="/static/main.js"></script>
     <link rel="stylesheet" href="/static/style.css">
 
-    <title>NOMP</title>
+    <title>BeMining.net</title>
 
 </head>
 
@@ -29,7 +29,7 @@
 <header>
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal">
 
-        <a class="pure-menu-heading hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;NOMP</a>
+        <a class="pure-menu-heading hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;BEMINING.NET</a>
 
         <ul>
             <li class="{{? it.selected === 'getting_started' }}pure-menu-selected{{?}}">
