--- a/website/pages/stats.html
+++ b/website/pages/stats.html
@@ -108,11 +108,11 @@
             <div id="poolWorkerChart"></div>
         </div>
     </div>
-    <!--<div class="pure-u-1-1">
-        <div class="chartWrapper">
+    <div class="pure-u-1-1">
+        <!--<div class="chartWrapper">
             <div id="poolBlockChart"></div>
-        </div>
-    </div>-->
+        </div>-->
+    </div>
 </div>
 
 <script>
