Modified Welcome Text
added fees, modified text

--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -79,12 +79,13 @@
         <img id="logoImg" src="/static/logo.svg">
     </div>
     <div class="pure-u-2-3">
-        <div id="welcomeText">Welcome to the future of mining</div>
+        <div id="welcomeText">Welcome to Shovel Pool</div>
         <ul id="welcomeItems">
-            <li>Low fees</li>
+            <li>2% fees + Bonuses</li>
+            <li>Payments direct to wallet addresses (no centralization)</li>
             <li>High performance Node.js backend</li>
             <li>User friendly mining client</li>
-            <li>Multi-coin / multi-pool</li>
+            <li></li>
         </ul>
     </div>
 </div>
