Adding miner stats
API fix

Added payments.html

Final changes to show miner stats

Typo

Removing luck

--- a/website/pages/api.html
+++ b/website/pages/api.html
@@ -2,9 +2,12 @@
     API Docs here
 
 <ul>
-<li>/stats - raw json statistic</li>
-<li>/pool_stats - historical time per pool json </li>
-<li>/live_stats - live stats </li>
+    <li><a href="/api/stats">/stats</a> global pool stats</li>
+    <li><a href="/api/blocks">/blocks</a> global block stats</li>
+    <li><a href="/api/pool_stats">/pool_stats</a> - historical stats</li>
+    <li><a href="/api/payments">/payments</a> - payment history</li>
+    <li><a href="/api/worker_stats?addr">/worker_stats?addr</a> - historical time per pool json </li>
+    <li><a href="/api/live_stats">/live_stats</a> - live stats </li>
 
 </ul>
 </div>
