--- a/website/pages/workers.html
+++ b/website/pages/workers.html
@@ -53,7 +53,7 @@
                 {{ for(var worker in it.stats.pools[pool].workers) { }}
                    {{var workerstat = it.stats.pools[pool].workers[worker];}}
                     <tr class="pure-table-odd">
-                        <td>{{=worker}}</td>
+                        <td><a href="/workers/{{=worker.split('.')[0]}}">{{=worker}}</a></td>
                         <td>{{=Math.floor(workerstat.shares)}}</td>
                         <td>{{=Math.floor(workerstat.invalidshares)}}</td>
                         <td>{{? workerstat.shares > 0}} {{=Math.floor(10000 * workerstat.shares / (workerstat.shares + workerstat.invalidshares)) / 100}}% {{??}} 0% {{?}}</td>
